@@ -36,12 +36,12 @@ import java.util.Properties;
 @Configuration("coreSamlConfiguration")
 @EnableConfigurationProperties(CasConfigurationProperties.class)
 public class CoreSamlConfiguration {
-    
+
     private static final int POOL_SIZE = 100;
 
     @Autowired
     private CasConfigurationProperties casProperties;
-    
+
     @Lazy
     @Bean(name = "shibboleth.VelocityEngine")
     public VelocityEngine velocityEngineFactoryBean() {
@@ -58,12 +58,12 @@ public class CoreSamlConfiguration {
 
         return new VelocityEngine(properties);
     }
-    
+
     @Bean(name = "shibboleth.OpenSAMLConfig")
     public OpenSamlConfigBean openSamlConfigBean() {
         return new OpenSamlConfigBean(parserPool());
     }
-    
+
     @Bean(name = "shibboleth.ParserPool", initMethod = "initialize")
     public BasicParserPool parserPool() {
         final BasicParserPool pool = new BasicParserPool();
@@ -78,7 +78,7 @@ public class CoreSamlConfiguration {
         final Map<String, Object> attributes = new HashMap<>();
         try {
             final Class clazz = ClassUtils.getClass(casProperties.getSamlCore().getSecurityManager());
-            attributes.put("http://apache.org/xml/properties/security-manager", clazz.newInstance());
+            attributes.put("http://apache.org/xml/properties/security-manager", clazz.getDeclaredConstructor().newInstance());
         } catch (final Exception e) {
             throw new RuntimeException(e.getMessage(), e);
         }
@@ -86,14 +86,10 @@ public class CoreSamlConfiguration {
 
         final Map<String, Boolean> features = new HashMap<>();
         features.put("http://apache.org/xml/features/disallow-doctype-decl", Boolean.TRUE);
-        features.put("http://apache.org/xml/features/validation/schema/normalized-value",
-                Boolean.FALSE);
-        features.put("http://javax.xml.XMLConstants/feature/secure-processing",
-                Boolean.TRUE);
-        features.put("http://xml.org/sax/features/external-general-entities",
-                Boolean.FALSE);
-        features.put("http://xml.org/sax/features/external-parameter-entities",
-                Boolean.FALSE);
+        features.put("http://apache.org/xml/features/validation/schema/normalized-value", Boolean.FALSE);
+        features.put("http://javax.xml.XMLConstants/feature/secure-processing", Boolean.TRUE);
+        features.put("http://xml.org/sax/features/external-general-entities", Boolean.FALSE);
+        features.put("http://xml.org/sax/features/external-parameter-entities", Boolean.FALSE);
         pool.setBuilderFeatures(features);
         return pool;
     }
@@ -105,13 +101,13 @@ public class CoreSamlConfiguration {
         return XMLObjectProviderRegistrySupport.getBuilderFactory();
     }
 
- 
+
     @Bean(name = "shibboleth.MarshallerFactory")
     @DependsOn("shibboleth.OpenSAMLConfig")
     public MarshallerFactory marshallerFactory() {
         return XMLObjectProviderRegistrySupport.getMarshallerFactory();
     }
-    
+
     @Bean(name = "shibboleth.UnmarshallerFactory")
     @DependsOn("shibboleth.OpenSAMLConfig")
     public UnmarshallerFactory unmarshallerFactory() {
